# arh

./: README.md  pyproject.toml  research.md
src/arh/: __init__.py  cli.py  core.py  io.py  opencode.py  results.py  schema.py
src/arh/phases/: __init__.py  contract.py  feedback.py  research.py  research_loop.py  setup.py
src/arh/prompts/: __init__.py  contract.md  contract_discussion.md  contract_finalize.md  feedback.md  research_loop_summary.md  research_patch.md  research_plan.md  setup_inspect.md  setup_inspect_discussion.md  setup_inspect_finalize.md  setup_patch.md  setup_prepare_discussion.md  setup_prepare_finalize.md
