[project]
name = "arh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11,<3.0",
    "typer>=0.15,<1.0",
]

[tool.setuptools.package-data]
arh = ["prompts/*.md"]

[project.scripts]
arh = "arh.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
